--- a/django_site/users/templates/users/register.html
+++ b/django_site/users/templates/users/register.html
@@ -12,8 +12,10 @@
             </div>
         </form>
         <div class="border-top pt-3">
+        </div>
+        <div class="has-account">
             <small class="text-muted">
-                Уже есть аккаунт? <a class="ml-2" href="#">Вход</a>
+                Уже есть аккаунт? <a class="ml-2" href="login">Вход</a>
             </small>
         </div>
     </div>
